# MaterialComparator

./: .gitignore  Dockerfile  README.md  app.py  materials.json  pyproject.toml  requirements.txt  test.py  test_cases.py
html/: comparison.html  index.html
uml/: function.txt  structure.txt
