[tool.poetry]
name = "Material Comparator"
version = "0.1.1"
description = "A Flask application for material comparison and testing"
authors = ["Mihaly Katona <katona.mihaly@sze.hu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.0"
requests = "^2.31.0"
unittest-xml-reporting = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-flask = "^1.2.0"
black = "^23.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
